--- a/src/components/navigationBar/navbar.css
+++ b/src/components/navigationBar/navbar.css
@@ -117,11 +117,6 @@
 
 /* ---------------- LOGO ---------------- */
 
-.logo {
-  width: 30px;
-  height: 30px;
-}
-
 .logo-image{
   height: 20px;
   width: 80px;
@@ -309,7 +304,7 @@
 
 /* ---------------- RESPONSIVE ---------------- */
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .desktop {
     display: none;
   }
@@ -321,17 +316,37 @@
   }
 
   .logo {
-    width: 30px;
-    height: 30px;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   .logo-image{
-    width: 80px;
-    height: 30px;
+    width: 80%;
+    height: 80%;
   }
 }
 
-@media (min-width: 769px) {
+/* Tablet */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .logo {
+    width: 30%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .logo-image{
+    width: 80%;
+    height: 80%;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1025px) {
   .hamburger {
     display: none;
   }
@@ -341,7 +356,7 @@
   }
 
   .logo {
-  width: 25%;
+  width: 20%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -351,8 +366,8 @@
 }
 
 .logo-image {
-  width: 80%;
-  height: 100%;
+  width: 60%;
+  height: 70%;
   display: flex;
   flex-direction: row;
   justify-content: center;
