--- a/src/components/ourWorks/ourWorks.css
+++ b/src/components/ourWorks/ourWorks.css
@@ -1,8 +1,11 @@
 .gallery-section {
-  padding: 100px 60px;
   background: var(--color-bg-main);
   text-align: center;
   scroll-margin-top: var(--navbar-height);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .gallery-heading {
@@ -22,11 +25,12 @@
 
 /* GRID */
 .gallery-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 22px;
-  max-width: 1100px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  /* grid-template-columns: repeat(3, 1fr);
+  gap: 22px; */
 }
 
 .gallery-card {
@@ -36,6 +40,7 @@
   cursor: pointer;
   box-shadow: 0 14px 35px rgba(0, 0, 0, 0.12);
   transition: transform 0.3s ease;
+  margin: 10px;
 }
 
 .gallery-card:hover {
@@ -222,16 +227,28 @@
 /* Mobile */
 @media (max-width: 767px) {
   .gallery-section {
-    padding: 80px 25px;
+    padding: 0px 10px 30px 10px;
+  }
+
+  .gallery-subheading{
+    margin-bottom: 15px;
   }
 
   .gallery-grid {
-    grid-template-columns: 1fr;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
   }
 
-  .gallery-card img {
-    height: 220px;
+  .gallery-card{
+    width: 100%;
   }
+
+  /* .gallery-card img {
+    height: 220px;
+  } */
 
   .gallery-modal-content {
     grid-template-columns: 1fr;
@@ -248,15 +265,57 @@
 
 /* Tablet */
 @media (min-width: 768px) and (max-width: 1024px) {
+  .gallery-section{
+    padding: 10px 30px;
+  }
+  .gallery-heading{
+    margin-top: 20px;
+  }
+  .gallery-subheading{
+    margin-bottom: 20px;
+  }
   .gallery-grid {
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
   }
 
-  .gallery-modal-image {
-    height: 420px;
+  .gallery-card{
+    width: 100%;
+    max-width: 420px;
   }
+
+  /* .gallery-modal-image {
+    height: 420px;
+  } */
 
   .gallery-info h3 {
     font-size: 24px;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1025px) {
+  .gallery-section{
+    padding: 20px 60px;
+  }
+  .gallery-subheading{
+    margin-bottom: 20px;
+  }
+  .gallery-grid{
+    width: 100%;
+    margin-left: 0px;
+    margin-right: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .gallery-card{
+    width: 100%;
+    max-width: 320px;
   }
 }
